--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "devDependencies": {
     "@types/node": "^18.14.0",
     "@vitejs/plugin-vue": "^4.0.0",
-    "typescript": "^4.9.3",
+    "prettier": "^2.8.4",
+    "typescript": "*",
     "unplugin-auto-import": "^0.14.4",
     "unplugin-vue-components": "^0.24.0",
     "vite": "^4.1.0",
