--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.3.3",
+    "class-transformer": "^0.5.1",
     "element-plus": "^2.2.32",
     "normalize.css": "^8.0.1",
     "pinia": "^2.0.32",
@@ -24,6 +25,7 @@
     "unplugin-auto-import": "^0.14.4",
     "unplugin-vue-components": "^0.24.0",
     "vite": "^4.1.0",
+    "vite-plugin-eslint": "^1.8.1",
     "vue-tsc": "^1.0.24"
   }
 }
