--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "devDependencies": {
     "@types/node": "^18.14.0",
     "@vitejs/plugin-vue": "^4.0.0",
+    "naive-ui": "^2.34.3",
     "prettier": "^2.8.4",
+    "sass": "^1.58.3",
     "typescript": "*",
     "unplugin-auto-import": "^0.14.4",
     "unplugin-vue-components": "^0.24.0",
