--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.4.2",
     "axios": "^1.3.3",
     "class-transformer": "^0.5.1",
     "element-plus": "^2.2.32",
