--- a/package.json
+++ b/package.json
@@ -9,26 +9,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "antd": "^5.4.2",
-    "axios": "^1.3.3",
-    "class-transformer": "^0.5.1",
-    "element-plus": "^2.2.32",
     "normalize.css": "^8.0.1",
-    "pinia": "^2.0.32",
-    "vue": "^3.2.45",
-    "vue-router": "4"
+    "pinia": "^2.1.7",
+    "vue": "^3.4.27",
+    "vue-router": "^4.3.2"
   },
   "devDependencies": {
-    "@types/node": "^18.14.0",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "naive-ui": "^2.34.3",
-    "prettier": "^2.8.4",
-    "sass": "^1.58.3",
-    "typescript": "*",
+    "@types/node": "^18.19.33",
+    "@vitejs/plugin-vue": "^4.6.2",
+    "prettier": "^2.8.8",
+    "sass": "^1.77.3",
+    "typescript": "^5.4.5",
     "unplugin-auto-import": "^0.14.4",
-    "unplugin-vue-components": "^0.24.0",
-    "vite": "^4.1.0",
+    "unplugin-vue-components": "^0.24.1",
+    "vite": "^4.5.3",
     "vite-plugin-eslint": "^1.8.1",
-    "vue-tsc": "^1.0.24"
+    "vue-tsc": "^1.8.27"
   }
 }
