--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.7",
+    "tailwind-merge": "^2.3.0",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
     "@types/node": "^18.19.33",
     "@vitejs/plugin-vue": "^4.6.2",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
     "prettier": "^2.8.8",
     "sass": "^1.77.3",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
     "unplugin-auto-import": "^0.14.4",
     "unplugin-vue-components": "^0.24.1",
